--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,7 +1,6 @@
 @import "variables";
 @import "mixins";
 @import "main";
-@import "sidebar";
-@import "sidebar-menu";
-@import "sidebar-settings";
+@import "sidebar-left";
+@import "sidebar-right";
 @import "table";
