Added localStorage function for active-color.

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -47,9 +47,13 @@ img {
 
 .container {
   display: flex;
+  flex-wrap: wrap;
   opacity: 0;
   padding-top: 0.75rem;
   transition: all 0.7s ease 0.15s;
+  @media #{$breakpoint-xl-up} {
+    flex-wrap: nowrap;
+  }
 }
 
 .js-loaded {
@@ -63,17 +67,34 @@ img {
 
 // ! sidebar
 .sidebar.left {
-  flex: 0 1 235px;
+  flex: 0 1 50%;
+  order: 2;
+  padding-right: 1.25rem;
+  @media #{$breakpoint-xl-up} {
+    flex: 0 1 235px;
+    order: 1;
+    padding-right: 0;
+  }
 }
 
 .sidebar.right {
-  flex: 0 1 200px;
+  flex: 0 1 50%;
+  order: 3;
+  padding-left: 1.25rem;
+  @media #{$breakpoint-xl-up} {
+    flex: 0 1 200px;
+    padding-left: 0;
+  }
 }
 
 // ! content
 .content {
-  flex: 0 1 calc(100% - 435px);
-  padding: 0 2.5rem;
+  flex: 0 1 100%;
+  order: 2;
+  @media #{$breakpoint-xl-up} {
+    flex: 0 1 calc(100% - 435px);
+    padding: 0 2.5rem;
+  }
 }
 
 // ! markdown import
