--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,6 +1,5 @@
 @import "variables";
 @import "mixins";
 @import "main";
-@import "sidebar-left";
-@import "sidebar-right";
+@import "sidebars";
 @import "table";
