--- a/assets/scss/_sidebars.scss
+++ b/assets/scss/_sidebars.scss
@@ -133,3 +133,108 @@
     }
   }
 }
+
+// ! theme switch
+.settings {
+  @include container-box;
+
+  .mode-switch-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: default;
+    padding-bottom: 1rem;
+
+    .mode-label {
+      color: #656565;
+      font-size: rem(14);
+    }
+
+    #mode-switch {
+      border-radius: 20px;
+      display: inline-block;
+      position: relative;
+      margin: 0 1rem;
+      width: 50px;
+      height: 24px;
+
+      &::after {
+        content: "";
+        border-radius: 50%;
+        background-color: #fff;
+        position: absolute;
+        top: 1px;
+        width: 22px;
+        height: 22px;
+        transition: all 0.3s;
+      }
+    }
+  }
+
+  &.light-mode {
+
+    #mode-switch {
+      background-color: #999;
+
+      &::after {
+        left: 1px;
+      }
+    }
+  }
+
+  &.dark-mode {
+    @include container-box(dark);
+
+    .mode-switch-container {
+
+      .mode-label {
+        color: #ccc;
+      }
+
+      #mode-switch {
+        background-color: var(--active-color);
+
+        &::after {
+          left: 27px;
+        }
+      }
+    }
+  }
+}
+
+// ! color picker
+.color-picker-container {
+  border-top: 1px dotted var(--border-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 1rem;
+
+  .color-label {
+    color: #656565;
+    font-size: rem(14);
+    padding-right: 0.5rem;
+  }
+
+  .color-wrap {
+    padding-left: 0.5rem;
+
+    #color-picker {
+      border-width: 0;
+      border-style: none;
+      border-image: none;
+      background-color: transparent;
+      padding: 0;
+      -webkit-appearance: none;
+      appearance: none;
+    }
+  }
+}
+
+.dark-mode .color-picker-container {
+  border-top-color: var(--border-color-dark);
+
+  .color-label {
+    color: #ccc;
+  }
+}
