--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -3,6 +3,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   margin: 3rem;
+  min-width: 672px;
   @media (prefers-color-scheme: light) {
     background-color: var(--bg-color);
   }
@@ -49,9 +50,8 @@ img {
   display: flex;
   flex-wrap: wrap;
   opacity: 0;
-  padding-top: 0.75rem;
-  transition: all 0.7s ease 0.15s;
-  @media #{$breakpoint-xl-up} {
+  transition: opacity 0.7s ease 0.15s;
+  @media #{$breakpoint-lg-up} {
     flex-wrap: nowrap;
   }
 }
@@ -60,40 +60,24 @@ img {
 
   .container {
     opacity: 1;
-    padding-top: 0;
-    transition: all 0.7s ease 0.15s;
+    transition: opacity 0.7s ease 0.15s;
   }
 }
 
 // ! sidebar
-.sidebar.left {
-  flex: 0 1 50%;
-  order: 2;
-  padding-right: 1.25rem;
-  @media #{$breakpoint-xl-up} {
+.sidebar {
+  flex: 0 1 100%;
+  @media #{$breakpoint-lg-up} {
     flex: 0 1 235px;
-    order: 1;
-    padding-right: 0;
-  }
-}
-
-.sidebar.right {
-  flex: 0 1 50%;
-  order: 3;
-  padding-left: 1.25rem;
-  @media #{$breakpoint-xl-up} {
-    flex: 0 1 200px;
-    padding-left: 0;
   }
 }
 
 // ! content
 .content {
   flex: 0 1 100%;
-  order: 2;
-  @media #{$breakpoint-xl-up} {
-    flex: 0 1 calc(100% - 435px);
-    padding: 0 2.5rem;
+  @media #{$breakpoint-lg-up} {
+    flex: 0 1 calc(100% - 235px);
+    padding-right: 2.5rem;
   }
 }
 
