Fixed color picker in Safari to use active color on load.

--- a/assets/scss/_sidebars.scss
+++ b/assets/scss/_sidebars.scss
@@ -241,6 +241,10 @@
       height: 26px;
       -webkit-appearance: none;
       appearance: none;
+
+      &::-webkit-color-swatch {
+        background-color: var(--active-color);
+      }
     }
   }
 }
