--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,7 +99,6 @@ img {
 }
 .footer p {
   color: #c5c5c5;
-  margin-top: 0;
   padding-left: 1rem;
 }
 .footer a {
@@ -339,6 +338,9 @@ pre#links-table {
   -webkit-appearance: none;
   appearance: none;
 }
+.color-picker-container .color-wrap #color-picker::-webkit-color-swatch {
+  background-color: var(--active-color);
+}
 
 .dark-mode .color-picker-container {
   border-top-color: var(--border-color-dark);
@@ -422,6 +424,7 @@ pre#links-table {
   background-color: #252525;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.07), 0 1px 14px 5px rgba(0, 0, 0, 0.15);
   color: #ccc;
+  margin: 0 auto;
 }
 .dark-mode .valetlinks-container tr:hover {
   background-color: #333;
